support an endpoint to seen all notifications
