# server/models/notification.go
@@ -30,6 +30,11 @@ func (d *DB) UpdateNotification(id int, seen bool) error {
 	return d.db.Model(&Notification{}).Where("id = ?", id).Updates(map[string]interface{}{"seen": seen}).Error
 }
 
+// UpdateUserNotification updates seen field for user notifications
+func (d *DB) UpdateUserNotification(userID string, seen bool) error {
+	return d.db.Model(&Notification{}).Where("user_id = ?", userID).Updates(map[string]interface{}{"seen": seen}).Error
+}
+
 // CreateNotification adds a new notification for a user
 func (d *DB) CreateNotification(n *Notification) error {
 	return d.db.Create(&n).Error
